# guobot

./: .gitignore  Cargo.toml  Cross.toml
.github/workflows/: deploy.yml
migrations/: 20230911135510_entries.sql  20240223122505_entry_message.sql
src/: handler.rs  main.rs
src/commands/: add.rs  add_message.rs  delete.rs  delete_message.rs  guide.rs  list.rs  mod.rs
src/database/: entries.rs
