[package]
name = "guobot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
serenity = { version = "0.11.6", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.32.0", default-features = false, features = [
    "rt-multi-thread",
] }
