[package]
name = "guobot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
dotenv = "0.15.0"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.36.0", default-features = false, features = [
    "rt-multi-thread",
] }
